Fix rules image sizing on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -155,4 +155,8 @@ footer {
     audio {
         position: relative;
     }
+
+    #rules-img {
+        width: 70%;   
+    }
 }
